# webmail

./: AGENTS.md  README.md
runtime/mail_api/: Dockerfile  Makefile  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml
runtime/mail_api/app/: __init__.py  dependencies.py  main.py
runtime/mail_api/app/adapters/: __init__.py  protocols.py  registry.py
runtime/mail_api/app/adapters/av/: clamav.py  noop.py
runtime/mail_api/app/adapters/db/: __init__.py  mongo.py
runtime/mail_api/app/adapters/file_storage/: __init__.py  nas.py  s3.py
runtime/mail_api/app/adapters/inbound/: __init__.py  gmail.py  imap.py  mailpit.py  memory.py  (+4 more)
runtime/mail_api/app/api/: __init__.py
runtime/mail_api/app/domain/: __init__.py  enums.py  errors.py  models.py  requests.py  responses.py
runtime/mail_api/app/middleware/: __init__.py  auth.py  correlation.py  error_handler.py  idempotency.py  otel.py  rate_limiter.py
runtime/mail_api/app/seed/: __init__.py  demo_data.py
runtime/mail_api/app/services/: __init__.py  attachment_facade.py  calendar_facade.py  categories_facade.py  compose_facade.py  contacts_facade.py  copilot_facade.py  event_bus_facade.py  focused_inbox.py  gdpr_service.py  mail_facade.py  op_log.py  preferences_facade.py  preview_service.py  rules_facade.py  saved_searches_facade.py  search_facade.py  signatures_facade.py  templates_facade.py
runtime/mail_api/app/workers/: __init__.py  dispatcher.py  inbound_poller.py  manager.py  retry.py  scheduler.py  snooze.py
runtime/mail_api/config/: __init__.py  default.yaml  settings.py
runtime/mail_api/migrations/: 0001_add_message_id_header_index.py  0002_add_account_id_indexes.py  0003_backfill_account_id.py  0004_encrypt_provider_meta.py  __init__.py  __main__.py
runtime/mail_api/tests/: conftest.py  test_api_basic.py  test_compose_facade.py  test_idempotency.py  test_mail_facade.py  test_op_log.py  test_pop3_adapter.py  test_rules_facade.py  test_search_facade.py  test_tenancy.py
(+172 files in other folders)
